feat(tournaments-api): Add endpoint to create tournament
